# CodeRevision

./: AppExceptions.h  CMakeLists.txt  CircleWidget.cpp  CircleWidget.h  Controller.cpp  Controller.h  Gui.cpp  Gui.h  Observable.h  Observer.h  Programmer.cpp  Programmer.h  ProgrammerWindow.cpp  ProgrammerWindow.h  ProgrammerWindow.ui  README.md  Repository.cpp  Repository.h  SourceFile.cpp  SourceFile.h  StatisticsWindow.cpp  StatisticsWindow.h  StatisticsWindow.ui  main.cpp  tests.h
